--- a/TruliaEDA.ipynb
+++ b/TruliaEDA.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EDA, Visualizations and Further data engineering\n",
+    "\n",
+    "#### Author: (EJ) Vivek Pandey\n",
+    "\n",
+    "This notebook is to be run after the initial data engineering notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
